--- a/client/marketplace/marketplace.less
+++ b/client/marketplace/marketplace.less
@@ -66,7 +66,8 @@
       .item-body {
         background: white;
         .shadow-z(1);
-        border-radius: 2px;
+        border-radius: @border-radius-base;
+        overflow: hidden;
 
         .item-images {
           img {
