--- a/client/layouts/menu/menu.less
+++ b/client/layouts/menu/menu.less
@@ -1,154 +1,5 @@
 @import (reference) '../../lib/variables.import.less';
+@import (reference) '../../lib/mixins.import.less';
 
 #mainMenu {
-
-  @main-menu-width: 300px;
-
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  z-index: @zindex-navbar-fixed + 1;
-  display: none;
-
-  .overlay,.menu {
-    height: 100%;
-    position: absolute;
-  }
-
-  .overlay {
-    width: 100%;
-    background: fadeout(black, 50%);
-  }
-
-  .menu {
-    width: 100%;
-    max-width: @main-menu-width;
-    overflow-x: hidden;
-    overflow-y: auto;
-
-    .panel {
-      width: 100%;
-      height: 100%;
-      margin: 0;
-      border-radius: 0;
-    }
-
-    .menus {
-
-      .divider {
-        height: 0;
-        border-top: 1px dotted @text-color;
-        text-align: center;
-        margin: @grid-gutter-width @grid-gutter-width / 2 @grid-gutter-width / 2 @grid-gutter-width / 2;
-        h6 {
-          margin: 0 auto;
-          background: @body-bg;
-          display: inline-block;
-          padding: 0 5px;
-          height: 20px;
-          line-height: 20px;
-          top: -10px;
-          position: relative;
-          color: @text-color;
-        }
-      }
-
-      .nav {
-        a {
-          white-space: nowrap;
-          overflow: hidden;
-          text-overflow: ellipsis;
-        }
-      }
-
-      .createShopBtn {
-        .icon-add {
-          @icon-size: 24px;
-
-          vertical-align: middle;
-          line-height: @line-height-computed;
-          margin-top: (@line-height-computed - @icon-size)/2;
-          margin-bottom: (@line-height-computed - @icon-size)/2;
-          margin-right: 5px;
-          display: block;
-          float: left;
-          height: @icon-size;
-          width: @icon-size;
-        }
-      }
-
-      .shop {
-        .logo {
-          @icon-size: 24px;
-
-          height: @icon-size;
-          width: @icon-size;
-          display: block;
-          float: left;
-          margin-right: 5px;
-          margin-top: (@line-height-computed - @icon-size)/2;
-          margin-bottom: (@line-height-computed - @icon-size)/2;
-          vertical-align: middle;
-          line-height: @line-height-computed;
-
-          border: 1px solid @brand-primary;
-          border-radius: 100%;
-          padding: 1px;
-
-          img {
-            height: 100%;
-            width: 100%;
-            border-radius: 100%;
-            background: none;
-            display: block;
-          }
-        }
-      }
-    }
-
-    .profile {
-      min-height: 70px;
-
-      .avatar {
-        height: 70px;
-        width: 70px;
-        display: block;
-        float: left;
-        border-radius: 100%;
-        border: 1px solid white;
-        padding: 1px;
-        background: transparent;
-        margin: 0 15px 0 0;
-
-        img {
-          height: 100%;
-          width: 100%;
-          border-radius: 100%;
-          background: white;
-        }
-      }
-
-      .info {
-        margin-left: 70px + @grid-gutter-width / 2;
-        .name {
-          font-size: @font-size-large;
-          white-space: nowrap;
-          overflow: hidden;
-          text-overflow: ellipsis;
-          color: white;
-          margin-bottom: 5px;
-        }
-      }
-    }
-
-    .auth {
-
-    }
-  }
-
-  &.visible {
-    display: block;
-  }
 }
