--- a/client/lib/bootstrap-material-design/less/mixins/shadows.import.less
+++ b/client/lib/bootstrap-material-design/less/mixins/shadows.import.less
@@ -14,6 +14,6 @@
   @shadow-opacity: (.25/@levels)*@index + .15;
 
   box-shadow: 0 (1px * @index) (4px * @index) rgba(0, 0, 0, @shadow-opacity), 0 (2px * @index) (6px * @index) rgba(0, 0, 0, @shadow-opacity);
-  transition: box-shadow 0.28s cubic-bezier(0.4, 0, 0.2, 1);
-//  z-index: max(@index * 10, 1);
+  transition: box-shadow @transition-duration-base @transition-timing-function-base;
+  //  z-index: max(@index * 10, 1);
 }
