--- a/client/lib/bootstrap-material-design/less/togglebutton.import.less
+++ b/client/lib/bootstrap-material-design/less/togglebutton.import.less
@@ -4,13 +4,13 @@
     user-select: none;
   }
   label {
-      font-weight: 400;
-      cursor: pointer;
+    font-weight: 400;
+    cursor: pointer;
     // Hide original checkbox
     input[type=checkbox]:first-child {
       opacity: 0;
       width: 0;
-      height:0;
+      height: 0;
     }
     // Switch bg on
     input[type=checkbox]:first-child:checked + .toggle {
@@ -42,24 +42,24 @@
       background-color: #F1F1F1;
       border-radius: 20px;
       position: relative;
-      box-shadow: 0 1px 3px 1px rgba(0,0,0,0.4);
+      box-shadow: 0 1px 3px 1px rgba(0, 0, 0, 0.4);
       left: -5px;
       top: -2px;
       transition: left 0.3s ease, background 0.3s ease, box-shadow 0.1s ease;
     }
     // Handle disabled
     input[type=checkbox][disabled]:first-child + .toggle:after,
-    input[type=checkbox][disabled]:checked:first-child + .toggle:after{
+    input[type=checkbox][disabled]:checked:first-child + .toggle:after {
       background-color: #BDBDBD;
     }
     // Ripple on
     input[type=checkbox]:first-child:checked ~ .toggle:active:after {
-      box-shadow: 0 1px 3px 1px rgba(0,0,0,0.4), 0 0 0 15px rgba(0, 149, 135, 0.1);
+      box-shadow: 0 1px 3px 1px rgba(0, 0, 0, 0.4), 0 0 0 15px rgba(0, 149, 135, 0.1);
     }
     // Ripple off and disabled
     input[type=checkbox]:first-child ~ .toggle:active:after,
     input[type=checkbox][disabled]:first-child ~ .toggle:active:after {
-      box-shadow: 0 1px 3px 1px rgba(0,0,0,0.4), 0 0 0 15px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 1px 3px 1px rgba(0, 0, 0, 0.4), 0 0 0 15px rgba(0, 0, 0, 0.1);
     }
     input[type=checkbox]:first-child:checked + .toggle:after {
       left: 15px;
