--- a/client/lib/bootstrap-material-design/less/variables.import.less
+++ b/client/lib/bootstrap-material-design/less/variables.import.less
@@ -2,45 +2,44 @@
 @material-font-path: "../fonts";
 
 // Material colors palette
-@red:         #F44336;
-@pink:        #E91E63;
-@purple:      #9C27B0;
-@deeppurple:  #673AB7;
-@indigo:      #3F51B5;
-@blue:        #4285f4;
-@lightblue:   #03A9F4;
-@cyan:        #00BCD4;
-@teal:        #009688;
-@lightgreen:  #8BC34A;
-@lime:        #CDDC39;
+@red: #F44336;
+@pink: #E91E63;
+@purple: #9C27B0;
+@deeppurple: #673AB7;
+@indigo: #3F51B5;
+@blue: #4285f4;
+@lightblue: #03A9F4;
+@cyan: #00BCD4;
+@teal: #009688;
+@lightgreen: #8BC34A;
+@lime: #CDDC39;
 @lightyellow: #FFEB3B;
-@orange:      #FF9800;
-@deeporange:  #FF5722;
-@grey:        #9E9E9E;
-@bluegrey:    #607D8B;
-@brown:       #795548;
-@lightgrey:   #ECECEC;
+@orange: #FF9800;
+@deeporange: #FF5722;
+@grey: #9E9E9E;
+@bluegrey: #607D8B;
+@brown: #795548;
+@lightgrey: #ECECEC;
 
 // Bootstrap shades
 @brand-primary: #3AA3A3;
 @brand-success: #0F9D58;
-@brand-info:    @lightblue;
+@brand-info: @lightblue;
 @brand-warning: @deeporange;
-@brand-danger:  @red;
+@brand-danger: @red;
 
-@body-bg:             #EEE;
-@link-hover-color:    @link-color;
-@body-font-weight:    300;
+@body-bg: #EEE;
+@link-hover-color: @link-color;
+@body-font-weight: 300;
 
-@font-family-sans-serif:  "RobotoDraft", "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
+@font-family-sans-serif: "RobotoDraft", "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
 
-@headings-font-weight:    300;
+@headings-font-weight: 300;
 
 // Typography elements for Material
-@darkbg-text: rgba(255,255,255,0.84);
-@lightbg-text: rgba(0,0,0,0.84);
-@icon-color: rgba(0,0,0,0.5);
-
+@darkbg-text: rgba(255, 255, 255, 0.84);
+@lightbg-text: rgba(0, 0, 0, 0.84);
+@icon-color: rgba(0, 0, 0, 0.5);
 
 // Bootstrap variables
 @btn-default: transparent;
@@ -67,27 +66,27 @@
 @radio-default: @lightbg-text;
 @radio-primary: @brand-primary;
 @radio-success: @brand-success;
-@radio-info:    @brand-info;
+@radio-info: @brand-info;
 @radio-warning: @brand-warning;
-@radio-danger:  @brand-danger;
+@radio-danger: @brand-danger;
 
 @input-danger: @brand-danger;
 @input-default: @brand-primary;
 @input-warning: @brand-warning;
 @input-success: @brand-success;
-@input-info:    @brand-info;
+@input-info: @brand-info;
 
 @navbar-danger-bg: @brand-danger;
 @navbar-warning-bg: @brand-warning;
 @navbar-success-bg: @brand-success;
-@navbar-info-bg:    @brand-info;
+@navbar-info-bg: @brand-info;
 @navbar-default-bg: white;
 @navbar-color: @darkbg-text;
 @navbar-link-color: @darkbg-text;
 @navbar-link-hover-color: @darkbg-text;
 @navbar-link-hover-bg: transparent;
 @navbar-link-active-color: @darkbg-text;
-@navbar-link-active-bg: rgba(0,0,0,0.05);
+@navbar-link-active-bg: rgba(0, 0, 0, 0.05);
 @navbar-link-disabled-color: #E5E5E5;
 @navbar-link-disabled-bg: transparent;
 @navbar-brand-color: @darkbg-text;
@@ -116,58 +115,54 @@
 
 @popover-bg: #323232;
 
-
-
 //== Form states and alerts
 //
 //## Define colors for form feedback states and, by default, alerts.
 
-@state-success-text:             @brand-success;
-@state-info-text:                @brand-info;
-@state-warning-text:             @brand-warning;
-@state-danger-text:              @brand-danger;
+@state-success-text: @brand-success;
+@state-info-text: @brand-info;
+@state-warning-text: @brand-warning;
+@state-danger-text: @brand-danger;
 
+@dropdown-divider-bg: rgba(229, 229, 229, 0.12);
 
+@padding-base-vertical: 6px;
+@padding-base-horizontal: 32px;
 
-@dropdown-divider-bg:            rgba(229, 229, 229, 0.12);
+@padding-large-vertical: 13px;
+@padding-large-horizontal: 48px;
 
+@padding-small-vertical: 3px;
+@padding-small-horizontal: 24px;
 
+@padding-xs-vertical: 0px;
+@padding-xs-horizontal: 18px;
 
-@padding-base-vertical:     6px;
-@padding-base-horizontal:   32px;
+@line-height-large: 1.25;
+@line-height-small: 1.5;
 
-@padding-large-vertical:    13px;
-@padding-large-horizontal:  48px;
-
-@padding-small-vertical:    3px;
-@padding-small-horizontal:  24px;
-
-@padding-xs-vertical:       0px;
-@padding-xs-horizontal:     18px;
-
-@line-height-large:         1.25;
-@line-height-small:         1.5;
-
-@border-radius-base:        2px;
-@border-radius-large:       4px;
-@border-radius-small:       1px;
-
-
+@border-radius-base: 2px;
+@border-radius-large: 4px;
+@border-radius-small: 1px;
 
 //== Alerts
 //
 //## Define alert colors, border radius, and padding.
 
-@alert-padding:               15px;
-@alert-border-radius:         @border-radius-small;
-@alert-link-font-weight:      bold;
+@alert-padding: 15px;
+@alert-border-radius: @border-radius-small;
+@alert-link-font-weight: bold;
 
-@alert-success-bg:            @brand-success;
-@alert-info-bg:               @brand-info;
-@alert-warning-bg:            @brand-warning;
-@alert-danger-bg:             @brand-danger;
-
+@alert-success-bg: @brand-success;
+@alert-info-bg: @brand-info;
+@alert-warning-bg: @brand-warning;
+@alert-danger-bg: @brand-danger;
 
 @navbar-height: 48px;
 
 @grid-gutter-width: 32px;
+
+@transition-duration-base: 0.28s;
+@transition-timing-function-base: cubic-bezier(0.4, 0, 0.2, 1);
+
+@modal-backdrop-opacity: .3;
