main layout fix

--- a/client/layouts/cart/cart.html
+++ b/client/layouts/cart/cart.html
@@ -1,5 +1,5 @@
 <template name="cart">
-    <div id="cart" class="modal fade">
+    <div class="cart-view modal fade">
         <div class="cart modal-menu modal-menu-right">
             <div class="modal-content">
                 <div class="header">
