main layout fix

--- a/client/layouts/menu/menu.html
+++ b/client/layouts/menu/menu.html
@@ -45,7 +45,7 @@
                         {{ #if ordersCount }}
                         <li>
                             <a href="{{pathFor route='orders'}}">
-                                {{_ "menu.mainLinks.orders.text"}}
+                                <i class="mdi-action-receipt"></i> {{_ "menu.mainLinks.orders.text"}}
                                 <span class="badge pull-right">{{ ordersCount}}</span>
                             </a>
                         </li>
