main layout fix

--- a/client/layouts/cart/cart.html
+++ b/client/layouts/cart/cart.html
@@ -3,9 +3,7 @@
         <div class="cart modal-menu modal-menu-right">
             <div class="modal-content">
                 <div class="header">
-                    <button class="closeBtn btn btn-icon">
-                        {{> iconCancel}}
-                    </button>
+                    <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
                     <h1>{{_ "cart.header"}}</h1>
                 </div>
                 <div class="items">
