--- a/client/layouts/cart/cart.less
+++ b/client/layouts/cart/cart.less
@@ -3,6 +3,11 @@
 
 #cart {
   .cart-view {
+    .header {
+      background: @brand-primary;
+      padding: @grid-gutter-width / 2;
+      color: white;
+    }
 
   }
 }
