--- a/client/layouts/main.less
+++ b/client/layouts/main.less
@@ -3,11 +3,6 @@
 
 section.main-layout {
   #content {
-    position: fixed;
-    top: @navbar-height;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    overflow: auto;
+    margin-top: @navbar-height;
   }
 }
