--- a/client/marketplace/marketplace.less
+++ b/client/marketplace/marketplace.less
@@ -66,11 +66,10 @@
       }
 
       .item-body {
-        background: @brand-primary;
+        background: white;
         .shadow-z(1);
         border-radius: @border-radius-base;
         overflow: hidden;
-        color: white;
 
         .item-images {
           min-height: 70px;
