--- a/client/partials/sell_button/sell_button.html
+++ b/client/partials/sell_button/sell_button.html
@@ -1,6 +1,6 @@
 <template name="sellButtonPartial">
     <div class="sell-button-partial">
-        <a class="btn btn-fab btn-raised btn-primary" href="{{ pathFor 'sell' }}">
+        <a class="btn btn-fab btn-raised btn-material-deeporange" href="{{ pathFor 'sell' }}">
             <i class="mdi-content-add"></i>
         </a>
     </div>
