cfs:access-point fix

--- a/client/layouts/cart/cart.html
+++ b/client/layouts/cart/cart.html
@@ -11,7 +11,7 @@
                     <div class="item">
                         {{ #with product }}
                         <div class="image">
-                            <img src="{{ abs image.url }}">
+                            <img src="{{ image.url }}">
                         </div>
                         {{ /with }}
                         <div class="remove pull-right">
