--- a/client/marketplace/shops/view/images/images.html
+++ b/client/marketplace/shops/view/images/images.html
@@ -1,5 +1,5 @@
 <template name="marketplaceShopsViewImages">
     <div class="images">
-        <img src="{{ abs cover.url }}" />
+        <img src="{{ cover.url }}" />
     </div>
 </template>
