--- a/client/marketplace/products/view/other/other.html
+++ b/client/marketplace/products/view/other/other.html
@@ -5,7 +5,7 @@
         <a href="{{pathFor route='shops.view' data=this }}" class="shop">
             {{ #if logo }}
                 <div class="logo">
-                    <img src="{{ abs logo.url }}" />
+                    <img src="{{ logo.url }}" />
                 </div>
             {{ /if }}
             <h2 class="title">{{title}}</h2>
@@ -19,7 +19,7 @@
                 <div class="col-xs-6 col-sm-4">
                     <a class="product-card" href="{{pathFor route='products.view' data=this }}">
                         {{ #if image }}
-                            <img src="{{ abs image.url }}" />
+                            <img src="{{ image.url }}" />
                         {{ /if }}
                         <div class="info">
                             <h3>
