--- a/client/marketplace/shops/view/products/products.html
+++ b/client/marketplace/shops/view/products/products.html
@@ -6,7 +6,7 @@
                 <div class="col-xs-6 col-sm-4">
                     <a class="product-card" href="{{pathFor route='products.view' data=this }}">
                         {{ #if image }}
-                            <img src="{{ abs image.url }}" />
+                            <img src="{{ image.url }}" />
                         {{ /if }}
                         <div class="info">
                             <h3>
