--- a/client/orders/view/details/details.html
+++ b/client/orders/view/details/details.html
@@ -5,7 +5,7 @@
             {{ #with shop }}
             {{ #if logo }}
             <a href="{{pathFor route='shops.view' data=this }}" class="logo">
-                <img src="{{ abs logo.url }}" />
+                <img src="{{ logo.url }}" />
             </a>
             {{ /if }}
             {{ /with }}
