--- a/client/partials/auto-form/images-field/images-field.html
+++ b/client/partials/auto-form/images-field/images-field.html
@@ -11,7 +11,7 @@
             <i class="mdi-file-file-upload"></i>
         </button>
 
-        <button type="button" class="btn btn-default btn-lg">
+        <button type="button" class="btn btn-default btn-lg cameraBtn">
             <i class="mdi-image-camera"></i>
         </button>
     </div>
