--- a/client/lib/bootstrap-material-design/less/mixins.import.less
+++ b/client/lib/bootstrap-material-design/less/mixins.import.less
@@ -3,6 +3,7 @@
 @import "mixins/alerts.import.less";
 @import "mixins/shadows.import.less";
 @import "mixins/navbars.import.less";
+@import "mixins/togglebuttons.import.less";
 
 // usage: .variations(~" .check", color, transparent);
 .variations(@extra, @property, @default) {
