--- a/client/marketplace/products/view/images/images.html
+++ b/client/marketplace/products/view/images/images.html
@@ -1,5 +1,7 @@
 <template name="marketplaceProductsViewImages">
     <div class="images">
+        {{ #each images }}
         <img src="{{ url }}" />
+        {{ /each }}
     </div>
 </template>
