--- a/client/sell/sell.less
+++ b/client/sell/sell.less
@@ -1,5 +1,9 @@
 @import (reference) '../lib/variables.import.less';
 
-.sellView {
+.sell-view {
   padding: 15px 0;
+
+  .buttons {
+    text-align: right;
+  }
 }
