--- a/client/lib/bootstrap-material-design/less/togglebutton.import.less
+++ b/client/lib/bootstrap-material-design/less/togglebutton.import.less
@@ -14,10 +14,10 @@
     }
     // Switch bg on
     input[type=checkbox]:first-child:checked + .toggle {
-      background-color: rgba(0, 149, 135, 0.5);
+      background-color: fadeout(white, 50%);
       // Handle on
       &:after {
-        background-color: #009587;
+        background-color: white;
       }
     }
     // Switch bg off and disabled
@@ -54,7 +54,7 @@
     }
     // Ripple on
     input[type=checkbox]:first-child:checked ~ .toggle:active:after {
-      box-shadow: 0 1px 3px 1px rgba(0, 0, 0, 0.4), 0 0 0 15px rgba(0, 149, 135, 0.1);
+      box-shadow: 0 1px 3px 1px rgba(0, 0, 0, 0.4), 0 0 0 15px fadeout(white, 90%);
     }
     // Ripple off and disabled
     input[type=checkbox]:first-child ~ .toggle:active:after,
@@ -65,4 +65,96 @@
       left: 15px;
     }
   }
+}
+
+.togglebutton-primary {
+  .togglebutton-material-variant(@brand-primary);
+}
+
+.togglebutton-success {
+  .togglebutton-material-variant(@brand-success);
+}
+
+.togglebutton-info {
+  .togglebutton-material-variant(@brand-info);
+}
+
+.togglebutton-warning {
+  .togglebutton-material-variant(@brand-warning);
+}
+
+.togglebutton-danger {
+  .togglebutton-material-variant(@brand-danger);
+}
+
+.togglebutton-material-red {
+  .togglebutton-material-variant(@red);
+}
+
+.togglebutton-material-pink {
+  .togglebutton-material-variant(@pink);
+}
+
+.togglebutton-material-purple {
+  .togglebutton-material-variant(@purple);
+}
+
+.togglebutton-material-deeppurple {
+  .togglebutton-material-variant(@deeppurple);
+}
+
+.togglebutton-material-indigo {
+  .togglebutton-material-variant(@indigo);
+}
+
+.togglebutton-material-blue {
+  .togglebutton-material-variant(@blue);
+}
+
+.togglebutton-material-lightblue {
+  .togglebutton-material-variant(@lightblue);
+}
+
+.togglebutton-material-cyan {
+  .togglebutton-material-variant(@cyan);
+}
+
+.togglebutton-material-teal {
+  .togglebutton-material-variant(@teal);
+}
+
+.togglebutton-material-lightgreen {
+  .togglebutton-material-variant(@lightgreen);
+}
+
+.togglebutton-material-lime {
+  .togglebutton-material-variant(@lime);
+}
+
+.togglebutton-material-lightyellow {
+  .togglebutton-material-variant(@lightyellow);
+}
+
+.togglebutton-material-orange {
+  .togglebutton-material-variant(@orange);
+}
+
+.togglebutton-material-deeporange {
+  .togglebutton-material-variant(@deeporange);
+}
+
+.togglebutton-material-grey {
+  .togglebutton-material-variant(@grey);
+}
+
+.togglebutton-material-bluegrey {
+  .togglebutton-material-variant(@bluegrey);
+}
+
+.togglebutton-material-brown {
+  .togglebutton-material-variant(@brown);
+}
+
+.togglebutton-material-lightgrey {
+  .togglebutton-material-variant(@lightgrey);
 }
