--- a/client/marketplace/products/view/view.html
+++ b/client/marketplace/products/view/view.html
@@ -2,14 +2,12 @@
     <div class="marketplace-products-view">
         {{ #with product }}
 
-        {{ #if image }}
-        {{ #with image }}
-        {{> marketplaceProductsViewImages }}
-        {{ /with }}
-        {{ /if }}
+            {{ #if imageIds }}
+            {{> marketplaceProductsViewImages }}
+            {{ /if }}
 
-        {{> marketplaceProductsViewDetails }}
-        {{> marketplaceProductsViewOther }}
+            {{> marketplaceProductsViewDetails }}
+            {{> marketplaceProductsViewOther }}
 
         {{ /with }}
     </div>
