--- a/client/partials/auto-form/images-field/images-field.less
+++ b/client/partials/auto-form/images-field/images-field.less
@@ -27,5 +27,45 @@
       height: 100%;
       width: 100%;
     }
+
+    .loading {
+
+      svg.loader {
+        height: 20px;
+        width: 70px;
+        margin: 40px 15px;
+
+        circle {
+          fill: @brand-primary;
+          -webkit-transform-origin: center;
+          -moz-transform-origin: center;
+          -o-transform-origin: center;
+          transform-origin: center;
+          -webkit-animation: loading 1.2s infinite;
+          -moz-animation: loading 1.2s infinite;
+          -o-animation: loading 1.2s infinite;
+          animation: loading 1.2s infinite;
+
+          &:nth-child(1) {
+            -webkit-animation-delay: .3s;
+            -moz-animation-delay: .3s;
+            -o-animation-delay: .3s;
+            animation-delay: .3s;
+          }
+          &:nth-child(2) {
+            -webkit-animation-delay: .5s;
+            -moz-animation-delay: .5s;
+            -o-animation-delay: .5s;
+            animation-delay: .5s;
+          }
+          &:nth-child(3) {
+            -webkit-animation-delay: .7s;
+            -moz-animation-delay: .7s;
+            -o-animation-delay: .7s;
+            animation-delay: .7s;
+          }
+        }
+      }
+    }
   }
 }
