--- a/client/lib/bootstrap-material-design/less/variables.import.less
+++ b/client/lib/bootstrap-material-design/less/variables.import.less
@@ -32,7 +32,7 @@
 @link-hover-color: @link-color;
 @body-font-weight: 300;
 
-@font-family-sans-serif: "RobotoDraft", "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
+@font-family-sans-serif: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
 
 @headings-font-weight: 300;
 
