--- a/client/layouts/menu/menu.html
+++ b/client/layouts/menu/menu.html
@@ -3,7 +3,9 @@
         <div class="modal-menu">
             <div class="modal-content">
                 <div class="header">
-                    <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                    <button type="button" class="close" data-dismiss="modal">
+                        <i class="mdi-navigation-chevron-left"></i>
+                    </button>
                     {{ #if currentUser }}
                         <div class="profile">
                             {{ #with currentUser}}
