--- a/client/layouts/menu/menu.less
+++ b/client/layouts/menu/menu.less
@@ -52,8 +52,14 @@
     }
 
     .close {
-      color: white;
-      text-shadow: 0 1px 0 darken(@brand-primary, 25%);
+      color: fadeout(white, 14%);
+      text-shadow: none;
+      opacity: 1;
+
+      &:hover,
+      &:focus {
+        color: white;
+      }
     }
   }
 
