--- a/client/layouts/menu/menu.html
+++ b/client/layouts/menu/menu.html
@@ -4,7 +4,7 @@
             <div class="modal-content">
                 <div class="header">
                     <button type="button" class="close" data-dismiss="modal">
-                        <i class="mdi-navigation-chevron-left"></i>
+                        <i class="mdi-navigation-close"></i>
                     </button>
                     {{ #if currentUser }}
                         <div class="profile">
