--- a/client/layouts/menu/menu.less
+++ b/client/layouts/menu/menu.less
@@ -52,13 +52,13 @@
     }
 
     .close {
-      color: fadeout(white, 14%);
+      color: white;
       text-shadow: none;
-      opacity: 1;
+      opacity: .84;
 
       &:hover,
       &:focus {
-        color: white;
+        opacity: 1;
       }
     }
   }
