--- a/client/layouts/menu/menu.less
+++ b/client/layouts/menu/menu.less
@@ -55,6 +55,7 @@
       color: white;
       text-shadow: none;
       opacity: .84;
+      transition: opacity @transition-duration-base @transition-timing-function-base;
 
       &:hover,
       &:focus {
