--- a/client/main.less
+++ b/client/main.less
@@ -39,3 +39,11 @@ form {
 .togglebutton-facebook {
   .togglebutton-material-variant(@facebook-color);
 }
+
+body .jumbotron {
+  background-color: darken(@brand-primary, 5%);
+  color: white;
+  .shadow-z(0);
+  border-radius: 0;
+  padding: @grid-gutter-width 0;
+}
