marketplace seller info

--- a/client/marketplace/marketplace.less
+++ b/client/marketplace/marketplace.less
@@ -43,6 +43,17 @@
               height: 100%;
               width: 100%;
             }
+
+            .no-avatar {
+              height: 100%;
+              width: 100%;
+              display: block;
+              line-height: 40px;
+              text-align: center;
+              font-size: 40px;
+              color: white;
+              background: darken(@brand-primary, 5%);
+            }
           }
 
           .actions {
