--- a/client/shops/view/details/details.less
+++ b/client/shops/view/details/details.less
@@ -1,4 +1,4 @@
-@import (reference) '../../../../lib/variables.import.less';
+@import (reference) '../../../lib/variables.import.less';
 
 .marketplace-shops-view {
   .details {
