--- a/client/shops/view/images/images.less
+++ b/client/shops/view/images/images.less
@@ -1,9 +1,10 @@
-@import (reference) '../../../../lib/variables.import.less';
+@import (reference) '../../../lib/variables.import.less';
 
-.marketplace-products-view {
+.marketplace-shops-view {
   .images {
-    background: darken(@brand-primary, 15%);
+    background: @brand-primary;
     width: 100%;
+    position: relative;
     overflow: hidden;
 
     img {
