--- a/client/products/view/images/images.less
+++ b/client/products/view/images/images.less
@@ -1,10 +1,9 @@
-@import (reference) '../../../../lib/variables.import.less';
+@import (reference) '../../../lib/variables.import.less';
 
-.marketplace-shops-view {
+.marketplace-products-view {
   .images {
-    background: @brand-primary;
+    background: darken(@brand-primary, 15%);
     width: 100%;
-    position: relative;
     overflow: hidden;
 
     img {
