--- a/client/products/view/other/other.less
+++ b/client/products/view/other/other.less
@@ -1,5 +1,5 @@
-@import (reference) '../../../../lib/variables.import.less';
-@import (reference) '../../../../lib/mixins.import.less';
+@import (reference) '../../../lib/variables.import.less';
+@import (reference) '../../../lib/mixins.import.less';
 
 .marketplace-products-view {
   .other {
