--- a/client/layouts/menu/menu.html
+++ b/client/layouts/menu/menu.html
@@ -60,7 +60,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="{{pathFor route='profile'}}">
+                            <a href="{{pathFor route='products.my'}}">
                                 <i class="mdi-action-store"></i> My products
                             </a>
                         </li>
